--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -131,7 +131,7 @@
 				        alert(result);
 				    },
 				    error: function(result) {
-				    	
+				    	alert(result["responseText"]);
 				    }
 				});
 				return false;
