--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -92,7 +92,7 @@
 				$.ajax({
 				    type: "GET",
 				    url: "/UserForm/FormServlet",
-				    data: JSON.stringify(userDetails),
+				    data: {"userEmail" : userEmail, "userPassword": userPassword},
 				    contentType: "application/json",
 				    dataType: "json",
 				    success: function(result){
