--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -12,149 +12,64 @@
 	<!-- Bootstrap CDN-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<!-- Handlebars -->
-	<script type="text/javascript" src="handlebars-v4.0.12.js"></script>
-	<!-- Form handlebar -->
-	<script type="text/javascript" src="form.js"></script>
 </head>
-<body>
-	<div id="heading"></div>
-	<!-- <script id="the-template" type="text/x-handlebars-template"> -->
-		
-	<!-- </script> -->
-	<script type="text/javascript">
-		// Registering the template
-		// var templateInfo = document.getElementById("the-template").innerHTML;
-		// var template = Handlebars.compile(templateInfo);
-		
-		var template = Handlebars.templates['form'];
-
-		// Partial Helper for Heading
-
-		Handlebars.registerPartial("heading", '<{{tagName}} class = "{{className}}">{{heading}}</{{tagName}}>');
-		var headingInfo = template({
-			heading: "Example Form using Handlebar JS",
-			className: "top-margin-1 bold-text center-text"
+<body style="background-color: skyblue;" class="center-text">
+	<div class="top-margin-30">
+		<p class="big-text helvetica">
+			Welcome  <span id="user-name"></span>
+		<p>
+		<div id="sign-up" class="btn btn-lg btn-default nav-button"><a link href="http://localhost:8080/UserForm/signup.html">Sign Up</a></div>
+		<div id="login" href="http://localhost:8080/UserForm/login.html" class="btn btn-lg btn-default nav-button">Login</div>
+		<div id="logout" onclick="logoutUser();" class="btn btn-lg btn-default nav-button">Logout</div>
+	</div>
+	<script>
+	function checkSession() {
+		$.ajax({
+		    type: "GET",
+		    url: "/UserForm/FormServlet",
+		    data: {"action": "sessionCheck"},
+		    contentType: "application/json",
+		    dataType: "json",
+		    success: function(result){
+	    		if(JSON.stringify(result) == 0) {
+	    			document.getElementById("user-name").value = "Guest!";
+		    	}
+		    	else {
+		    		document.getElementById("user-name").value = JSON.stringify(result);
+		    	}
+		    },
+		    error: function(result) {
+		    	if(JSON.stringify(result) == 0) {
+	    			document.getElementById("user-name").innerHTML = "Guest!";
+	    			$("#login").show();
+	    			$("#logout").hide();
+		    	}
+		    	else {
+		    		document.getElementById("user-name").innerHTML = result["responseText"] + "!";
+		    		$("#login").hide();
+	    			$("#logout").show();
+		    	}
+	    		
+		    }
 		});
-		document.getElementById("heading").innerHTML += headingInfo;
-
-		// Helper for Form
-		var personInfo = template({
-			name: {
-				tagId: "user-name",
-				tagName: "Name",
-				tagPlaceHolder: "Enter your name",
-				tagType: "text"
-			},
-			email: {
-				tagId: "user-email",
-				tagName: "E-Mail",
-				tagPlaceHolder: "Enter your E-Mail ID",
-				tagType: "text"
-			},
-			gender: {
-				tagId: "user-gender",
-				tagName: "Gender",
-				tagClass: "form-check-inline",
-				tagType: "radio",
-				tagChoices: [
-					{choice: "Male",subtagClass: "active", subtagName: "gender-choice"},
-					{choice: "Female", subtagClass: "", subtagName: "gender-choice"},
-					{choice: "Other", subtagClass: "", subtagName: "gender-choice"}
-				]
-			},
-			password: {
-				tagId: "user-password",
-				tagName: "Password",
-				tagType: "password",
-				tagPlaceHolder: "Enter your password"
-			},
-			confirmPassword: {
-				tagId: "confirm-password",
-				tagName: "Confirm Password",
-				tagType: "password",
-				tagPlaceHolder: "Confirm your password"
-			},
-			buttons: [
-				{choice: "Submit", buttonType: "button", tagClass: "btn btn-success", buttonFunction: "return submitForm()"},
-				{choice: "Reset", buttonType: "reset", tagClass: "btn btn-danger", buttonFunction: "resetForm()"}
-			]
+	}
+	// checkSession();
+	
+	function logoutUser() {
+		$.ajax({
+		    type: "GET",
+		    url: "/UserForm/FormServlet",
+		    data: {"action": "logout"},
+		    contentType: "application/json",
+		    dataType: "json",
+		    success: function(result){
+	    		location.reload();
+		    },
+		    error: function(result) {
+	    		location.reload();
+		    }
 		});
-		document.getElementById("user-form").innerHTML += personInfo;
-		
-		// Error Function
-
-		function resetForm(e) {
-			document.getElementById("form-errors").innerHTML = "";	
-			document.getElementById("user-name").value = "";
-			document.getElementById("user-email").value = "";
-			document.getElementById("user-password").value = "";
-			document.getElementById("confirm-password").value = "";
-		}
-
-		function submitForm() {
-			let userName = document.getElementById("user-name").value;
-			let userEmail = document.getElementById("user-email").value;
-			let userPassword = document.getElementById("user-password").value;
-			let userConfirmPassword = document.getElementById("confirm-password").value;
-			let userGenderNode = document.getElementsByName("gender-choice");
-			let userGender = "o";
-			let formText = "";
-			if(userGenderNode[0].checked) {
-				userGender = "m";
-			}
-			else if(userGenderNode[1].checked) {
-				userGender = "f";
-			}
-			// Check for emptiness of the fields
-			if(userName == "" || userEmail == "" || userPassword == "" || userConfirmPassword == "") {
-				formText = "<span class='red-text'>No field should be empty!</span>";
-			}
-
-			// Check for E-mail using Regex
-
-			else if(!(/^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/).test(String(userEmail).toLowerCase())) {
-				formText = "<span class='red-text'>E-mail format does not match!</span>";
-			}
-
-			//Check for Password equality
-
-			else if(String(userPassword) != String(userConfirmPassword)) {
-				formText = "<span class='red-text'>Password does not match!</span>";
-			}
-
-			// Success
-			else {
-				var userDetails = {};
-				userDetails["userName"] = userName;
-				userDetails["userEmail"] = userEmail;
-				userDetails["userPassword"] = userPassword;
-				userDetails["userGender"] = userGender;
-				$.ajax({
-				    type: "POST",
-				    url: "/UserForm/FormServlet",
-				    data: JSON.stringify(userDetails),
-				    contentType: "application/json",
-				    dataType: "json",
-				    success: function(result){
-				    	if(JSON.stringify(result) == 0) {
-				    		formText = "<span class='red-text'>User with that E-mail ID already exists!</span>";
-				    		resetForm();
-							document.getElementById("form-errors").innerHTML = formText;
-				    	}
-				    	else {
-				    		formText = "<span class='green-text'>Account creation successful!</span>";
-				    		resetForm();
-							document.getElementById("form-errors").innerHTML = formText;
-				    	}
-				    },
-				    error: function(result) {
-				    	
-				    }
-				});
-			}
-			document.getElementById("form-errors").innerHTML = formText;
-		}
+	}
 	</script>
 </body>
 </html>
