--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Registration Form</title>
+	<title>LogIn</title>
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<!-- jQuery -->
