--- a/WebContent/signup.html
+++ b/WebContent/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Registration Form</title>
+	<title>SignUp</title>
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<!-- jQuery -->
@@ -32,7 +32,7 @@
 
 		Handlebars.registerPartial("heading", '<{{tagName}} class = "{{className}}">{{heading}}</{{tagName}}>');
 		var headingInfo = template({
-			heading: "Example Form using Handlebar JS",
+			heading: "SignUp",
 			className: "top-margin-1 bold-text center-text"
 		});
 		document.getElementById("heading").innerHTML += headingInfo;
