--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -93,7 +93,17 @@
 			window.location ='http://localhost:8080/UserForm/index.html';
 		}
 		
+		function clearAllErrors() {
+			if($("#user-email").hasClass("field-error")) {
+				$("#user-email").removeClass("field-error");
+			}
+			if($("#user-password").hasClass("field-error")) {
+				$("#user-password").removeClass("field-error");
+			}
+		}
+		
 		function resetForm(e) {
+			clearAllErrors();
 			document.getElementById("form-errors").innerHTML = "";	
 			document.getElementById("user-name").value = "";
 			document.getElementById("user-email").value = "";
@@ -105,14 +115,22 @@
 			let userEmail = document.getElementById("user-email").value;
 			let userPassword = document.getElementById("user-password").value;
 			let formText = "";
+			clearAllErrors();
 			// Check for emptiness of the fields
 			if(userEmail == "" || userPassword == "") {
+				if(userEmail == "") {
+					$("#user-email").addClass("field-error");
+				}
+				if(userPassword == "") {
+					$("#user-password").addClass("field-error");
+				}
 				formText = "<span class='red-text'>No field should be empty!</span>";
 			}
 
 			// Check for E-mail using Regex
 
 			else if(!(/^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/).test(String(userEmail).toLowerCase())) {
+				$("#user-email").addClass("field-error");
 				formText = "<span class='red-text'>E-mail format does not match!</span>";
 			}
 
