--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -13,8 +13,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
-<body style="background-color: skyblue;" class="center-text">
-	<h1>Form Using Servlet and Handlebar JS</h1>
+<body style="height: 100%; width: auto; background: linear-gradient(180deg, #052860 400px, white 100px);" class="center-text">
+	<h1 class="white-text top-margin-5">Form Using Servlet and Handlebar JS</h1>
 	<div class="top-margin-30">
 		<p class="big-text helvetica">
 			Welcome  <span id="user-name"></span>
@@ -27,6 +27,15 @@
 		</div>
 		<div id="logout" onclick="logoutUser();" class="btn btn-lg btn-default nav-button">Logout</div>
 	</div>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
 	<script>
 	function checkSession() {
 		$.ajax({
